# FTP

./: .gitignore  README.md  protocol.txt
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.cpp  main.cpp
server/: CMakeLists.txt  file.txt
server/include/: server.h
server/src/: main.cpp  server.cpp
utils/: ftp_message.cpp  ftp_message.h  utils.cpp  utils.h
